--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>DataAccess1</AssemblyName>
+    <AssemblyName>DataAccess</AssemblyName>
   </PropertyGroup>
 
 </Project>
